# nativelink

./: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  flake.nix  forward.sh  nativelink-repo.yaml  otel-collector.yaml  vm.yaml
.github/workflows/: lre.yaml
deploy/dev/: kustomization.yaml
kubernetes/components/alerts/: alert.yaml
kubernetes/components/kustomization/: flux-kustomization.yaml
kubernetes/components/worker/: worker.yaml
kubernetes/nativelink/: kustomization.yaml  nativelink-config.json5  nativelink.yaml
kubernetes/overlays/lre-flux/: kustomization.yaml
kubernetes/resources/alert-kustomization/: alert-kustomization.yaml
kubernetes/resources/cert-manager/: cert-manager.yaml
kubernetes/resources/flux/: flux-kustomizations.yaml  gitrepository.yaml
kubernetes/resources/flux-experimental/: flux-kustomizations.yaml
kubernetes/resources/grafana/: grafana.yaml
kubernetes/resources/nativelink-core/: kustomization.yaml
kubernetes/workers/resources/lre-cc/: kustomization.yaml
kubernetes/workers/resources/lre-rs/: kustomization.yaml
kubernetes/workers/resources/siso-chromium/: kustomization.yaml
kubernetes/workers/resources/worker-init/: kustomization.yaml
local-remote-execution/overlays/: lre-cc.nix  rust-config.nix
local-remote-execution/rust/: extension.bzl
native-cli/components/: cilium.go  volumes.go
nativelink-config/src/: cas_server.rs
nativelink-error/: BUILD.bazel  Cargo.toml
nativelink-error/src/: lib.rs
nativelink-macro/src/: lib.rs
nativelink-proto/: BUILD.bazel  Cargo.toml  gen_lib_rs_tool.py
nativelink-proto/genproto/: lib.rs
nativelink-scheduler/: BUILD.bazel  Cargo.toml
nativelink-scheduler/src/: cache_lookup_scheduler.rs  grpc_scheduler.rs  memory_awaited_action_db.rs
nativelink-scheduler/tests/: action_messages_test.rs  cache_lookup_scheduler_test.rs  simple_scheduler_test.rs
nativelink-service/: BUILD.bazel  Cargo.toml
nativelink-service/src/: ac_server.rs  bep_server.rs  bytestream_server.rs  capabilities_server.rs  cas_server.rs  execution_server.rs
nativelink-service/tests/: ac_server_test.rs  bep_server_test.rs  bytestream_server_test.rs  cas_server_test.rs  fetch_server_test.rs  worker_api_server_test.rs
nativelink-store/: BUILD.bazel  Cargo.toml
nativelink-store/src/: completeness_checking_store.rs  existence_cache_store.rs  fast_slow_store.rs  filesystem_store.rs  grpc_store.rs  memory_store.rs  redis_store.rs  s3_store.rs  verify_store.rs
nativelink-store/tests/: completeness_checking_store_test.rs  redis_store_test.rs  s3_store_test.rs
nativelink-util/: BUILD.bazel  Cargo.toml
nativelink-util/src/: action_messages.rs  common.rs  digest_hasher.rs  evicting_map.rs  lib.rs  metrics.rs  origin_event.rs  origin_event_middleware.rs  platform_properties.rs  proto_stream_utils.rs  telemetry.rs
nativelink-util/tests/: proto_stream_utils_test.rs
nativelink-worker/: BUILD.bazel
nativelink-worker/src/: running_actions_manager.rs  worker_utils.rs
nativelink-worker/tests/: local_worker_test.rs  running_actions_manager_test.rs
tools/: pre-commit-hooks.nix
web/: package.json
web/api/: package.json
web/api/src/: payload-types.ts  payload.config.ts
web/api/src/collections/: Posts.ts
web/platform/: package.json
web/platform/src/pages/resources/: index.astro
