load("@protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "@rules_rust//rust:defs.bzl",
    "rust_doc",
    "rust_doc_test",
    "rust_library_group",
)
load("@rules_rust_prost//:defs.bzl", "rust_prost_library", "rust_prost_toolchain")

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@crates//:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "@crates//:tonic",
    ],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    compile_well_known_types = False,
    include_transitive_deps = True,
    prost_opts = ["bytes=."],
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = "@crates//:prost-types",
    tonic_plugin = "@crates//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_runtime = ":tonic_runtime",
)

toolchain(
    name = "prost_toolchain",
    toolchain = "prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
)

rust_prost_library(
    name = "remote_execution_proto",
    proto = "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "semver_proto",
    proto = "@bazel_remote_apis//build/bazel/semver:semver_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "status_proto",
    proto = "@googleapis//google/rpc:status_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "bytestream_proto",
    proto = "@googleapis//google/bytestream:bytestream_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "operations_proto",
    proto = "@googleapis//google/longrunning:operations_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "build_proto",
    proto = "@googleapis//google/devtools/build/v1:build_proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "nativelink_proto",
    srcs = [
        "build/bazel/remote/asset/v1/remote_asset.proto",  # TODO(aaronmondal): Fix broken upstream.
        "com/github/trace_machina/nativelink/remote_execution/events.proto",
        "com/github/trace_machina/nativelink/remote_execution/worker_api.proto",
    ],
    strip_import_prefix = "/nativelink-proto",
    deps = [
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
        "@googleapis//google/api:annotations_proto",
        "@googleapis//google/bytestream:bytestream_proto",
        "@googleapis//google/devtools/build/v1:build_proto",
        "@googleapis//google/longrunning:operations_proto",
        "@googleapis//google/rpc:status_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:empty_proto",
        "@protobuf//:timestamp_proto",
    ],
)

rust_prost_library(
    name = "nativelink-proto",
    proto = ":nativelink_proto",
    visibility = ["//visibility:public"],
)

rust_doc(
    name = "docs",
    crate = ":nativelink-proto",
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    timeout = "short",
    crate = ":nativelink-proto",
)
